<package>
  <name>ptu_laser_assembler</name>
  <version>1.0.0</version>
  <description>Take lidar message and do things with the stuff for reasons</description>
  <maintainer email="philippe.babin@gmail.com">Philippe Babin</maintainer>
  <license>GNU LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pointmatcher_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pointmatcher_ros</run_depend>
</package>
